--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <h1 class="">{{ author }}</h1>
             <nav class="nav nav-tabs">
-                <a class="nav-item nav-link active" href="#">Tous</a>
+                <a class="nav-item nav-link active" href="#">Tous ({{ nbDocs.all }})</a>
                 <!--
                 <a class="nav-item nav-link" href="#">Article</a>
                 <a class="nav-item nav-link" href="#">Chapitre</a>
@@ -25,7 +25,7 @@
             <div class="row">
                 <div class="col">
                     <ul>
-                        <li v-for="doc in docs">
+                        <li v-for="doc in docs" class="text-justify">
                             <a :href="`https://hal.archives-ouvertes.fr/${doc.halId_s}`" target="_blank">{{ doc.halId_s }}</a>
                             {{ decodeHtml(doc.label_s) }}
                         </li>
