--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div id="app">
         <div class="container">
             <author></author>
-            <navigation :nb-docs="nbDocs"></navigation>
+            <navigation :nb-docs="nbDocs" @filter-type-doc="filterDocs"></navigation>
             <div class="row">
                 <div class="col">
                     <ul>
-                        <li v-for="doc in docs" class="text-justify">
+                        <li v-for="doc in selectedDocs" :key="doc.halId_s" class="text-justify">
                             <a :href="`https://hal.archives-ouvertes.fr/${doc.halId_s}`" target="_blank">{{ doc.halId_s }}</a>
                             {{ decodeHtml(doc.label_s) }}
                         </li>
