--- a/index.html
+++ b/index.html
@@ -13,12 +13,7 @@
             <navigation :nb-docs="nbDocs" @filter-type-doc="filterDocs"></navigation>
             <div class="row">
                 <div class="col">
-                    <ul>
-                        <li v-for="doc in selectedDocs" :key="doc.halId_s" class="text-justify">
-                            <a :href="`https://hal.archives-ouvertes.fr/${doc.halId_s}`" target="_blank">{{ doc.halId_s }}</a>
-                            {{ decodeHtml(doc.label_s) }}
-                        </li>
-                    </ul>
+                    <references :docs="selectedDocs" :pub-dates="pubDates"></references>
                 </div>
             </div>
         </div>
@@ -29,6 +24,7 @@
     <script src="config.js"></script>
     <script src="components/author.js"></script>
     <script src="components/navigation.js"></script>
+    <script src="components/references.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
