Link on credits to github/galaHAL

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <references :docs="selectedDocs" :pub-dates="pubDates"></references>
                 </div>
             </div>
-            <p class="text-right text-muted"><small>Propulsé par galaHAL</small></p>
+            <p class="text-right text-muted"><small>Propulsé par <a href="https://github.com/Alex-bzh/galaHAL" target="_blank">galaHAL</a></small></p>
         </div>
     </div>
     <script src="assets/vuejs/vue.min.js"></script>
